Added compatibility to Java 24 and decompiled AttrInfo for cfparse