@@ -21,15 +21,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<release combine.self="override" />
-					<!-- Eclipse is creating problems again wrt. Maven.
-					It seem to only supports preview features for the
-					latest JDK, not the current one... -->
-					<source>${maven.compiler.release}</source>
-					<target>${maven.compiler.release}</target>
+				<release combine.self="override" />
+				<source>24</source>
+				<target>24</target>
 					<compilerArgs>
 						<arg>-proc:none</arg>
-						<arg>--enable-preview</arg>
 						<arg>
 							--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
 						<arg>
@@ -49,7 +45,6 @@
 				<version>3.2.5</version>
 				<configuration>
 					<argLine>
-						--enable-preview
 						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
